--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-location": "^16.1.0",
     "expo-status-bar": "~1.4.4",
+    "lottie-react-native": "^5.1.6",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "^0.71.8",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-maps": "^1.7.1",
+    "react-native-open-maps": "^0.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
