--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "^0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-open-maps": "^0.4.3",
     "react-native-vector-icons": "^10.0.0"
