--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.4.7",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-location": "~15.1.1",
@@ -19,6 +20,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-open-maps": "^0.4.3",
+    "react-native-reanimated": "~2.14.4",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
