--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-open-maps": "^0.4.3",
+    "react-native-paper": "^5.10.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-vector-icons": "^10.0.0"
   },
