--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-maps": "1.3.2",
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.10.0",
+    "react-native-phone-call": "^1.2.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-vector-icons": "^10.0.0"
