--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "^0.71.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
+    "react-native-onboarding-swiper": "^1.2.0",
     "react-native-open-maps": "^0.4.3",
     "react-native-paper": "^5.10.0",
     "react-native-phone-call": "^1.2.0",
