--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-native-phone-call": "^1.2.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
