--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
+    "expo-font": "^11.4.0",
     "expo-location": "~15.1.1",
+    "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.4.4",
     "firebase": "^10.1.0",
     "geolib": "^3.3.4",
