--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
     "react-native": "^0.71.8",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
     "react-native-onboarding-swiper": "^1.2.0",
