--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.4.0",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
