- Adjustments to onboarding screens - Updates to all UI components with same colour - Change app logo and splash screen

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "FoodGo",
-    "slug": "FoodGo",
+    "name": "Halalicious",
+    "slug": "Halalicious",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
