--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "geolib": "^3.3.4",
     "lottie-react-native": "5.1.4",
     "react": "18.2.0",
-    "react-native": "^0.71.8",
+    "react-native": "0.71.13",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
@@ -38,7 +38,8 @@
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-vector-icons": "^10.0.0",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
